# logF

./: CMakeLists.txt  README.md
examples/: benchmark.cpp  glog_benchmark.cpp  logF_benchmark.cpp  main.cpp  spdlog_benchmark.cpp
include/: consumer.h  double_buffer.h  log_message.h  logger.h  mmap_writer.h  mpsc_ring_buffer.h  ring_buffer.h  variant.h
src/: consumer.cpp  double_buffer.cpp  logger.cpp  mmap_writer.cpp  ring_buffer.cpp
